--- a/posts/index.mdx
+++ b/posts/index.mdx
@@ -21,7 +21,7 @@ Our first theme is focused on foundations and core concepts. It provides integra
 
 **OAuth Setup**
 
-- <Link href='/posts/oauth-infrastructure-setup'>Initial Authorization Server Setup</Link>
+- <Link href='/posts/oauth-infrastructure-setup'>Initial Authorization Server</Link>
 - <Link href='/posts/web-technology-setup'>JavaScript Technology Setup</Link>
 - <Link href='/posts/http-debugging-setup'>HTTP Proxy Setup</Link>
 - <Link href='/posts/developer-ssl-setup'>SSL Trust Configuration</Link>
@@ -137,7 +137,7 @@ The final theme covers end-to-end deployment of components to run in the AWS Clo
 
 - <Link href='/posts/cloud-hosting'>Overview</Link>
 - <Link href='/posts/cloud-domain-setup'>Domain Setup</Link>
-- <Link href='/posts/managed-authorization-server-setup'>Managed Authorization Server Setup</Link>
+- <Link href='/posts/managed-authorization-server-setup'>Cloud Authorization Server Setup</Link>
 
 **Modern Web Deployment**
 
