--- a/posts/managed-authorization-server-setup.mdx
+++ b/posts/managed-authorization-server-setup.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Managed Authorization Server Setup'
+title: 'Cloud Authorization Server Setup'
 ---
 
 Being migrated from https://authguidance.com/managed-authorization-server-setup.
