--- a/posts/web-architecture-goals.mdx
+++ b/posts/web-architecture-goals.mdx
@@ -39,7 +39,7 @@ If an app has XSS vulnerabilities, then an attacker may be able to access secure
 OpenID Connect can provide multiple ways for users to sign in to an SPA, and this can include options that are both user friendly and secure. In addition, an SPA should be in full control of its usability behaviour:
 
 - <span style={{color:'green'}}>**Session Behaviour**</span>: the UI should be in control of redirects and expiry events and be able to write any code before and after
-- <span style={{color:'green'}}>**Multi Tab Browsing**</span>: the end user should be able to use multiple browser tabs and navigate across multiple applications without issues
+- <span style={{color:'green'}}>**Multi-Tab Browsing**</span>: the end user should be able to use multiple browser tabs for the same application
 
 ### Goal: Good Search Results
 
