--- a/posts/android-code-sample-overview.mdx
+++ b/posts/android-code-sample-overview.mdx
@@ -1,5 +1,3 @@
----
-title: 'Android Setup and AppAuth Sample'
----
+# Android Setup and AppAuth Sample
 
 Being migrated from https://authguidance.com/android-setup.
