--- a/posts/android-https-debugging.mdx
+++ b/posts/android-https-debugging.mdx
@@ -1,5 +1,3 @@
----
-title: 'Android Code Sample – Overview'
----
+# Android Code Sample – Overview
 
 Being migrated from https://authguidance.com/android-code-sample-overview.
