--- a/posts/api-architecture-node.mdx
+++ b/posts/api-architecture-node.mdx
@@ -1,5 +1,3 @@
----
-title: 'Node.js API – Overview'
----
+# Node.js API – Overview
 
 Being migrated from https://authguidance.com/api-architecture-node.
