--- a/posts/api-authorization-design.mdx
+++ b/posts/api-authorization-design.mdx
@@ -1,5 +1,3 @@
----
-title: 'API Authorization Behaviour'
----
+# API Authorization Behaviour
 
 Being migrated from https://authguidance.com/api-authorization-design.
