--- a/posts/api-journey-client-side.mdx
+++ b/posts/api-journey-client-side.mdx
@@ -1,5 +1,3 @@
----
-title: 'API Journey – Client Side'
----
+# API Journey – Client Side
 
 Being migrated from https://authguidance.com/api-journey-client-side.
