--- a/posts/api-journey-server-side.mdx
+++ b/posts/api-journey-server-side.mdx
@@ -1,5 +1,3 @@
----
-title: 'API Journey – Server Side'
----
+# API Journey – Server Side
 
 Being migrated from https://authguidance.com/api-journey-server-side.
