--- a/posts/api-platform-design.mdx
+++ b/posts/api-platform-design.mdx
@@ -1,5 +1,3 @@
----
-title: 'API Platform Behaviour'
----
+# API Platform Behaviour
 
 Being migrated from https://authguidance.com/api-platform-design.
