--- a/posts/api-technical-support-analysis.mdx
+++ b/posts/api-technical-support-analysis.mdx
@@ -1,5 +1,3 @@
----
-title: 'API Technical Support Analysis'
----
+# API Technical Support Analysis
 
 Being migrated from https://authguidance.com/api-technical-support-analysis.
