--- a/posts/azure-active-directory-setup.mdx
+++ b/posts/azure-active-directory-setup.mdx
@@ -1,5 +1,3 @@
----
-title: 'Microsoft Entra ID SPA and API Setup'
----
+# Microsoft Entra ID SPA and API Setup
 
 Being migrated from https://authguidance.com/azure-active-directory-setup.
