--- a/posts/azure-ad-troubleshooting.mdx
+++ b/posts/azure-ad-troubleshooting.mdx
@@ -1,5 +1,3 @@
----
-title: 'Microsoft Entra ID OAuth Flow'
----
+# Microsoft Entra ID OAuth Flow
 
 Being migrated from https://authguidance.com/azure-ad-troubleshooting.
