--- a/posts/basicandroidapp-execution.mdx
+++ b/posts/basicandroidapp-execution.mdx
@@ -1,5 +1,3 @@
----
-title: 'How to Run the Android Code Sample'
----
+# How to Run the Android Code Sample
 
 Being migrated from https://authguidance.com/basicandroidapp-execution.
