--- a/posts/basicapi-codingkeypoints.mdx
+++ b/posts/basicapi-codingkeypoints.mdx
@@ -1,6 +1,4 @@
----
-title: 'Basic API – Coding Key Points'
----
+# Basic API – Coding Key Points
 
 Previously we covered <Link href='/posts/basicspa-codingkeypoints'>SPA Coding Key Points</Link> for the first code sample. In this post we’ll drill into some important identity related code in the API.
 
