--- a/posts/basicspa-codingkeypoints.mdx
+++ b/posts/basicspa-codingkeypoints.mdx
@@ -1,6 +1,4 @@
----
-title: 'Basic SPA – Coding Key Points'
----
+# Basic SPA – Coding Key Points
 
 The <Link href='/posts/basicspa-oauthworkflow'>SPA and API OAuth Messages</Link> post explained the HTTP/S messages used by our code sample. In this post we’ll drill into some important identity related code in the SPA.
 
