--- a/posts/basicspa-execution.mdx
+++ b/posts/basicspa-execution.mdx
@@ -1,6 +1,4 @@
----
-title: 'Basic SPA – How to Run the Sample'
----
+# Basic SPA – How to Run the Sample
 
 Previously we summarised the behaviour of the initial <Link href='/posts/basicspa-overview'>SPA and API Code Sample</Link>. Next we will get it running on a Developer PC, then visually describe the important OAuth related behaviour.
 
