--- a/posts/basicspa-overview.mdx
+++ b/posts/basicspa-overview.mdx
@@ -1,6 +1,4 @@
----
-title: 'Basic SPA – Overview'
----
+# Basic SPA – Overview
 
 In the <Link href='/posts/web-architecture-goals'>Web Architecture Goals</Link> post we explained that our first code sample's objective would be to get an integrated setup running on a developer PC, so that access tokens are sent between a UI, API and authorization server.
 
