--- a/posts/cdn-static-content-delivery.mdx
+++ b/posts/cdn-static-content-delivery.mdx
@@ -1,5 +1,3 @@
----
-title: 'Web Content Delivery'
----
+# Web Content Delivery
 
 Being migrated from https://authguidance.com/cdn-static-content-delivery.
