--- a/posts/cloud--native-updates.mdx
+++ b/posts/cloud--native-updates.mdx
@@ -1,5 +1,3 @@
----
-title: 'Cloud Native Updates'
----
+# Cloud Native Updates
 
 Being migrated from https://authguidance.com/cloud--native-updates.
