--- a/posts/desktop-app-coding-key-points.mdx
+++ b/posts/desktop-app-coding-key-points.mdx
@@ -1,5 +1,3 @@
----
-title: 'Desktop App – Coding Key Points'
----
+# Desktop App – Coding Key Points
 
 Being migrated from https://authguidance.com/desktop-app-coding-key-points.
