--- a/posts/desktop-app-how-to-run-the-code-sample.mdx
+++ b/posts/desktop-app-how-to-run-the-code-sample.mdx
@@ -1,5 +1,3 @@
----
-title: 'Desktop App – How to Run the Code Sample'
----
+# Desktop App – How to Run the Code Sample
 
 Being migrated from https://authguidance.com/desktop-app-how-to-run-the-code-sample.
