--- a/posts/desktop-apps-overview.mdx
+++ b/posts/desktop-apps-overview.mdx
@@ -1,5 +1,3 @@
----
-title: 'Desktop Code Sample Overview'
----
+# Desktop Code Sample Overview
 
 Being migrated from https://authguidance.com/desktop-apps-overview.
