--- a/posts/developer-ssl-setup.mdx
+++ b/posts/developer-ssl-setup.mdx
@@ -1,5 +1,3 @@
----
-title: 'SSL Trust Configuration'
----
+# SSL Trust Configuration
 
 Being migrated from https://authguidance.com/developer-ssl-setup.
