--- a/posts/effective-api-logging.mdx
+++ b/posts/effective-api-logging.mdx
@@ -1,5 +1,3 @@
----
-title: 'Effective API Logging'
----
+# Effective API Logging
 
 Being migrated from https://authguidance.com/effective-api-logging.
