--- a/posts/error-handling-and-supportability.mdx
+++ b/posts/error-handling-and-supportability.mdx
@@ -1,5 +1,3 @@
----
-title: 'Error Handling and Supportability'
----
+# Error Handling and Supportability
 
 Being migrated from https://authguidance.com/error-handling-and-supportability.
