--- a/posts/federated-logins.mdx
+++ b/posts/federated-logins.mdx
@@ -1,5 +1,3 @@
----
-title: 'User Authentication Behaviour'
----
+# User Authentication Behaviour
 
 Being migrated from https://authguidance.com/federated-logins.
