--- a/posts/final-desktop-app-coding-key-points.mdx
+++ b/posts/final-desktop-app-coding-key-points.mdx
@@ -1,5 +1,3 @@
----
-title: 'Final Desktop App – Coding Key Points'
----
+# Final Desktop App – Coding Key Points
 
 Being migrated from https://authguidance.com/final-desktop-app-coding-key-points.
