--- a/posts/final-desktop-sample-overview.mdx
+++ b/posts/final-desktop-sample-overview.mdx
@@ -1,5 +1,3 @@
----
-title: 'Final Desktop App – Overview'
----
+# Final Desktop App – Overview
 
 Being migrated from https://authguidance.com/final-desktop-sample-overview.
