--- a/posts/final-nodeapi-coding-key-points.mdx
+++ b/posts/final-nodeapi-coding-key-points.mdx
@@ -1,5 +1,3 @@
----
-title: 'Node.js API – Coding Model'
----
+# Node.js API – Coding Model
 
 Being migrated from https://authguidance.com/final-nodeapi-coding-key-points.
