--- a/posts/how-to-run-the-ios-code-sample.mdx
+++ b/posts/how-to-run-the-ios-code-sample.mdx
@@ -1,6 +1,4 @@
----
-title: 'How to Run the iOS Code Sample'
----
+# How to Run the iOS Code Sample
 
 Being migrated from https://authguidance.com/how-to-run-the-ios-code-sample.
 
