--- a/posts/how-to-run-the-react-js-spa.mdx
+++ b/posts/how-to-run-the-react-js-spa.mdx
@@ -1,5 +1,3 @@
----
-title: 'How to Run the React SPA'
----
+# How to Run the React SPA
 
 Being migrated from https://authguidance.com/how-to-run-the-react-js-spa.
