--- a/posts/ios-code-sample-coding-key-points.mdx
+++ b/posts/ios-code-sample-coding-key-points.mdx
@@ -1,5 +1,3 @@
----
-title: 'iOS Code Sample – Coding Key Points'
----
+# iOS Code Sample – Coding Key Points
 
 Being migrated from https://authguidance.com/ios-code-sample-coding-key-points.
