--- a/posts/ios-code-sample-overview.mdx
+++ b/posts/ios-code-sample-overview.mdx
@@ -1,5 +1,3 @@
----
-title: 'iOS Code Sample – Overview'
----
+iOS Code Sample – Overview
 
 Being migrated from https://authguidance.com/ios-code-sample-overview.
