--- a/posts/java-spring-boot-api-overview.mdx
+++ b/posts/java-spring-boot-api-overview.mdx
@@ -1,5 +1,3 @@
----
-title: 'Java API – Overview'
----
+# Java API – Overview
 
 Being migrated from https://authguidance.com/java-spring-boot-api-overview.
