--- a/posts/jwt-access-token-validation.mdx
+++ b/posts/jwt-access-token-validation.mdx
@@ -1,6 +1,4 @@
----
-title: 'JWT Access Token Validation'
----
+# JWT Access Token Validation
 
 Previously we drilled into <Link href='/posts/basicapi-codingkeypoints'>API Coding Key Points</Link> for the initial code sample. Next we will describe the most mainstream way in which APIs validate JWT access tokens. These techniques are covered in many online resources. This post summarizes some best practices, but focuses primarily on simple and productive setups when working with JWTs.
 
