--- a/posts/log-aggregation-setup.mdx
+++ b/posts/log-aggregation-setup.mdx
@@ -1,5 +1,3 @@
----
-title: 'Elasticsearch Log Aggregation Setup'
----
+# Elasticsearch Log Aggregation Setup
 
 Being migrated from https://authguidance.com/log-aggregation-setup.
