--- a/posts/net-core-api-coding-model.mdx
+++ b/posts/net-core-api-coding-model.mdx
@@ -1,5 +1,3 @@
----
-title: '.NET API – Coding Model'
----
+# .NET API – Coding Model
 
 Being migrated from https://authguidance.com/net-core-api-coding-model.
