--- a/posts/net-core-api-oauth-integration.mdx
+++ b/posts/net-core-api-oauth-integration.mdx
@@ -1,5 +1,3 @@
----
-title: '.NET API – OAuth Integration'
----
+# .NET API – OAuth Integration
 
 Being migrated from https://authguidance.com/net-core-api-oauth-integration.
