--- a/posts/oauth-infrastructure-setup.mdx
+++ b/posts/oauth-infrastructure-setup.mdx
@@ -1,6 +1,4 @@
----
-title: 'Initial Authorization Server'
----
+# Initial Authorization Server
 
 Previously we discussed factors to consider when designing <Link href='/posts/jwt-access-token-validation'>JWT Access Token Validation</Link>. Next we will describe how to get started with an authorization server.
 
