--- a/posts/quick-start.mdx
+++ b/posts/quick-start.mdx
@@ -1,6 +1,4 @@
----
-title: 'Code Samples Quick Start'
----
+# Code Samples Quick Start
 
 This page briefly summarises the blog’s final code samples. These all use only fictional data and user accounts. They include frontends that call Cloud Hosted APIs and a Cloud Authorization Server. For each app, one of the following credentials can be used to sign in:
 
