--- a/posts/reactjs-codingkeypoints.mdx
+++ b/posts/reactjs-codingkeypoints.mdx
@@ -1,5 +1,3 @@
----
-title: 'Final SPA – Coding Key Points'
----
+# Final SPA – Coding Key Points
 
 Being migrated from https://authguidance.com/reactjs-codingkeypoints.
