--- a/posts/serverless-api-deployment.mdx
+++ b/posts/serverless-api-deployment.mdx
@@ -1,5 +1,3 @@
----
-title: 'Serverless API Deployment'
----
+# Serverless API Deployment
 
 Being migrated from https://authguidance.com/serverless-api-deployment.
