--- a/posts/serverless-api-overview.mdx
+++ b/posts/serverless-api-overview.mdx
@@ -1,5 +1,3 @@
----
-title: 'Serverless API Overview'
----
+# Serverless API Overview
 
 Being migrated from https://authguidance.com/serverless-api-overview.
