--- a/posts/spring-boot-api-coding-model.mdx
+++ b/posts/spring-boot-api-coding-model.mdx
@@ -1,5 +1,3 @@
----
-title: 'Java API – Coding Model'
----
+# Java API – Coding Model
 
 Being migrated from https://authguidance.com/spring-boot-api-coding-model.
