--- a/posts/spring-boot-api-oauth-integration.mdx
+++ b/posts/spring-boot-api-oauth-integration.mdx
@@ -1,5 +1,3 @@
----
-title: 'Java API – OAuth Integration'
----
+# Java API – OAuth Integration
 
 Being migrated from https://authguidance.com/spring-boot-api-oauth-integration.
