--- a/posts/web-architecture-goals.mdx
+++ b/posts/web-architecture-goals.mdx
@@ -1,6 +1,4 @@
----
-title: 'Web Architecture Goals'
----
+# Web Architecture Goals
 
 The <Link href='/'>Home Page</Link> described OAuth in terms of overall goals for a software platform. In this post we will describe what we are looking for in an optimal web architecture, which is not just about security. This post briefly summarizes some goals and concerns for web apps.
 
