--- a/posts/web-technology-setup.mdx
+++ b/posts/web-technology-setup.mdx
@@ -1,6 +1,4 @@
----
-title: 'JavaScript Technology Setup'
----
+# JavaScript Technology Setup
 
 Previously we chose an <Link href='/posts/oauth-infrastructure-setup'>Initial Authorization Server</Link>. In this post we will describe how this blog uses JavaScript technology, for Node.js APIs, browser based apps and Electron desktop apps. The goal is to focus on our own requirements rather than being dictated to be technology.
 
