--- a/posts/android-coding-key-points.mdx
+++ b/posts/android-coding-key-points.mdx
@@ -1,5 +1,3 @@
----
-title: 'Android Code Sample – Coding Key Points'
----
+# Android Code Sample – Coding Key Points
 
 Being migrated from https://authguidance.com/android-coding-key-points.
