--- a/posts/android-infrastructure-setup.mdx
+++ b/posts/android-infrastructure-setup.mdx
@@ -1,5 +1,3 @@
----
-title: 'Android Code Sample – Infrastructure'
----
+# Android Code Sample – Infrastructure
 
 Being migrated from https://authguidance.com/android-infrastructure-setup.
