--- a/posts/improved-spa-code-sample-overview.mdx
+++ b/posts/improved-spa-code-sample-overview.mdx
@@ -1,5 +1,3 @@
----
-title: 'Updated SPA and API – Overview'
----
+# Updated SPA and API – Overview
 
 Being migrated from https://authguidance.com/improved-spa-code-sample-overview.
