--- a/posts/ios-code-sample-infrastructure.mdx
+++ b/posts/ios-code-sample-infrastructure.mdx
@@ -1,5 +1,3 @@
----
-title: 'iOS Code Sample – Infrastructure'
----
+# iOS Code Sample – Infrastructure
 
 Being migrated from https://authguidance.com/ios-code-sample-infrastructure.
