--- a/posts/ios-https-debugging.mdx
+++ b/posts/ios-https-debugging.mdx
@@ -1,5 +1,3 @@
----
-title: 'iOS HTTPS Debugging Setup'
----
+# iOS HTTPS Debugging Setup
 
 Being migrated from https://authguidance.com/ios-http-debugging.
