--- a/posts/ios-setup.mdx
+++ b/posts/ios-setup.mdx
@@ -1,5 +1,3 @@
----
-title: 'iOS Setup and AppAuth Sample'
----
+# iOS Setup and AppAuth Sample
 
 Being migrated from https://authguidance.com/ios-setup.
