--- a/posts/native-architecture-goals.mdx
+++ b/posts/native-architecture-goals.mdx
@@ -1,5 +1,3 @@
----
-title: 'Native Architecture Goals'
----
+# Native Architecture Goals
 
 Being migrated from https://authguidance.com/native-architecture-goals.
