--- a/posts/net-core-code-sample-overview.mdx
+++ b/posts/net-core-code-sample-overview.mdx
@@ -1,5 +1,3 @@
----
-title: '.NET API – Overview'
----
+# .NET API – Overview
 
 Being migrated from https://authguidance.com/net-core-code-sample-overview.
