--- a/posts/serverless-api-coding-model.mdx
+++ b/posts/serverless-api-coding-model.mdx
@@ -1,5 +1,3 @@
----
-title: 'Serverless API Coding Model'
----
+# Serverless API Coding Model
 
 Being migrated from https://authguidance.com/serverless-api-coding-model.
