--- a/posts/spa-back-end-for-front-end.mdx
+++ b/posts/spa-back-end-for-front-end.mdx
@@ -1,5 +1,3 @@
----
-title: 'SPA Backend for Frontend'
----
+# SPA Backend for Frontend
 
 Being migrated from https://authguidance.com/spa-back-end-for-front-end.
