--- a/posts/updated-api-coding-key-points.mdx
+++ b/posts/updated-api-coding-key-points.mdx
@@ -1,5 +1,3 @@
----
-title: 'Updated API – Coding Key Points'
----
+# Updated API – Coding Key Points
 
 Being migrated from https://authguidance.com/updated-api-coding-key-points.
