--- a/posts/updated-spa-coding-key-points.mdx
+++ b/posts/updated-spa-coding-key-points.mdx
@@ -1,5 +1,3 @@
----
-title: 'Updated SPA – Coding Key Points'
----
+# Updated SPA – Coding Key Points
 
 Being migrated from https://authguidance.com/updated-spa-coding-key-points.
